# tenantpower

./: .gitignore  README.md  owner_deduplication.ipynb  parcel_scrape.R  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy.yml
app/: _redirects  package-lock.json  package.json
app/src/lib/: state.svelte.js  state.svelte.ts
app/src/lib/components/: AlsoOwned.svelte  Geocoder.svelte  Map.svelte  Modal.svelte  Overlay.svelte  PropertyCard.svelte  Spinner.svelte
app/src/lib/config/: instance.json
app/src/lib/content/: about.md
app/src/lib/schemas/: instance.ts
app/src/routes/: +layout.svelte  +page.svelte
app/src/routes/cluster/[id]/: +page.server.ts
app/src/routes/cluster/[id]/[prop_id]/: +page.svelte
app/src/routes/prop/[id]/: +page.server.ts  +page.svelte
app/static/data/: bounds.geojson
backend/: README.md  main.py  pyproject.toml
pipelines/: README.md
pipelines/dedupe/: README.md  main.py  owner_deduplication.ipynb  pyproject.toml
pipelines/dedupe/training/: training.json
training/: learned_settings  training.json
