[project]
name = "tenantpower-dedupe"
version = "0.1.0"
description = "Deduplication workflows for Tenant Power Application."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dedupe>=3.0.3",
    "geopandas>=1.1.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
]
